--- a/day_7/my_website/style.css
+++ b/day_7/my_website/style.css
@@ -1,3 +1,6 @@
+/* Content formatting */
+/* Background */
+
 html, body {
   margin: 0;
   padding: 0;
@@ -8,40 +11,183 @@ body {
   background-image: url(images/DnD_Starter_Art.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center 20%;
   background-size: cover;
   width: 100vw;
+  max-width: 100%;
 }
 
-h1 {
-  margin: auto;
-  width: 75%;
-  font-family: serif;
-  font-size: 6vw;
-  text-align: center;
-  color: hsl(0 78% 50%);
-  text-transform: uppercase;
-  text-shadow: .05em .05em .05em black;
-}
+/* Images */
 
-#logoDnd {
-  margin: auto;
-  max-width: 98%;
+#logo-dnd {
+  width: 1000px;
+  height: auto;
   filter: drop-shadow(10px 10px 5px black);
 }
 
-p, h2, h3, ol {
-  color: white;
+img.book {
+  height: 400px;
+  width: auto;
+  text-align: center;
+  margin: 0;
+  margin-top: 20px;
+}
+
+/* Text */
+
+h1 {
+  font-family: serif;
+  font-size: 60px;
+  margin: 0;
+  color: hsl(0 78% 50%);
+  text-shadow: .05em .05em .05em black;
+  text-transform: uppercase;
+}
+
+h2 {
   font-family: sans-serif;
-  text-shadow: .1em .1em .1em black;
+  color: white;
+  text-shadow: .05em .05em .05em black;
+  text-transform: uppercase;
+  width: 100%;
+  font-size: 60px;
+  text-align: center;
+}
+
+h3 {
+  font-family: sans-serif;
+  color: white;
+  text-shadow: .05em .05em .05em black;
+  text-transform: uppercase;
   background-color: rgba(0, 0, 0, .5);
-  margin: 10px;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 40px;
+  margin: 0 auto;
+  padding: 0px .25em;
+}
+
+p {
+  font-family: serif;
+  color: white;
+  font-size: 30px;
+  text-shadow: .05em .05em .05em black;
+  background-color: rgba(0, 0, 0, .5);
+  padding: .5em;
+  width: 800px;
+  margin: 0px auto;
+  text-align: left;
+  margin-top: 20px;
+}
+
+ol {
+  font-family: serif;
+  color: white;
+  text-shadow: .05em .05em .05em black;
+  background-color: rgba(0, 0, 0, .5);
+  padding: .5em;
+  list-style-position: inside;
+  text-align: left;
+  font-size: 30px;
+  margin: 0;
+  margin-top: 20px;
 }
 
 a {
   color: white;
 }
 
-img.book {
-  max-height: 50vh;
+form {
+  background-color: rgba(0, 0, 0, .5);
+  display: grid;
+  width: 340px;
+  grid-template-columns: 1fr, 1fr;
+  padding: 10px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
+
+label {
+  grid-column: 1 / 2;
+  font-family: sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: .05em .05em .05em black;
+  text-align: right;
+  margin: 2px;
+}
+
+select {
+  grid-column: 2 / 3;
+  background-color: rgba(0, 0, 0, 0);
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: white;
+  text-shadow: .05em .05em .05em black;
+  margin: 2px;
+}
+
+option {
+  background-color: black;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  color: white;
+}
+
+/* Layout formatting */
+
+div.section {
+  height: 100vh;
+  width: 100vw;
+  scroll-snap-align: start;
+}
+
+div.header {
+  height: 70px;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+div.content {
+  display: inline-block;
+  height: calc(100vh - 70px);
+  width: 100vw;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  position: relative;
+}
+
+div.sub-section {
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: start;
+  position: absolute;
+  overflow: scroll;
+}
+
+div.sub-section.one {
+  left: 0;
+}
+
+div.sub-section.two {
+  left: 100vw;
+}
+
+div.sub-section.three {
+  left: 200vw;
+}
+
+div.sub-section.four {
+  left: 300vw;
+}
+
+div.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/*  */
